Bug 687660 - incorrect font rendering/missing glyphs from ps2pdf
Summary: incorrect font rendering/missing glyphs from ps2pdf
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: master
Hardware: PC Linux
: P2 normal
Assignee: Igor Melichev
URL: http://xxx.lanl.gov/ftp/exports/fig1.eps
Keywords:
Depends on:
Blocks:
 
Reported: 2004-09-07 12:35 UTC by keinbiervorvier
Modified: 2008-12-19 08:31 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
fig1.eps (137.01 KB, application/octet-stream)
2004-09-09 00:54 UTC, Igor Melichev
Details
loop.ps.gz (417.13 KB, application/octet-stream)
2004-10-10 08:47 UTC, Alex Cherepanov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description keinbiervorvier 2004-09-07 12:35:42 UTC
converting the postscript figure at

http://xxx.lanl.gov/ftp/exports/fig1.eps

to pdf with ps2pdf13 from current cvs HEAD (from gs8.30 to gs8.32) results in
missing numbers in the graph labels when displayed with acroread (5.09) on linux
while the results are as expected with gs 8.14

compare  the incorrect pdf
http://xxx.lanl.gov/ftp/exports/fig1-gs832.pdf

with the correct pdf 
http://xxx.lanl.gov/ftp/exports/fig1-gs814.pdf

I have more examples, all figures generated with 
%%Creator: OriginLab Corporation

Cheers
T.
Comment 1 Jack Moffitt 2004-09-08 07:30:14 UTC
Confirmed problems on CVS HEAD, althought not quite the same ones.  If I create
the pdf with CVS HEAD, Ghostscript can not read the file, failing with
/undefined in --get--.  Acrobat Reader can read the file, but some of the axis
labels are missing.  xpdf can't see the numbers on any of the files.
Comment 2 Igor Melichev 2004-09-09 00:54:13 UTC
Created attachment 885 [details]
fig1.eps

A local copy of the test file.
Comment 3 Igor Melichev 2004-09-09 00:56:53 UTC
Comment on attachment 885 [details]
fig1.eps

When made a local copy of the test file, the extension was unintentionally
changed. Now changing it back.
Comment 5 Igor Melichev 2004-09-09 04:46:04 UTC
Patch to GS_8_1X :
http://www.ghostscript.com/pipermail/gs-cvs/2004-September/004795.html
Comment 6 Igor Melichev 2004-09-09 04:51:08 UTC
The test file fig1.eps has been added to comparefiles as Bug687660.ps .
Comment 7 keinbiervorvier 2004-10-04 21:23:17 UTC
this patch fixed the incorrect rendering of the sample figure I provided,
however it sends ps2pdf13 from current cvs HEAD into an infinite loop on
the ps file

http://lanl.arxiv.org/ftp/exports/loop.ps.gz

i.e. "ps2pdf13 loop.ps" with src/gdevpdte.c revision 1.60 generates a pdf
file, while it goes into an infinie loop with revision 1.61 

Cheers
T.
Comment 8 Alex Cherepanov 2004-10-10 08:47:48 UTC
Created attachment 961 [details]
loop.ps.gz
Comment 9 Alex Cherepanov 2004-10-10 08:49:59 UTC
Comment on attachment 961 [details]
loop.ps.gz

Local copy of the sample file.
Comment 10 Igor Melichev 2004-10-14 08:46:47 UTC
The problem with loop.ps depends on the bug 687669.
Comment 11 Igor Melichev 2004-10-14 10:32:06 UTC
A preparation patch
http://www.ghostscript.com/pipermail/gs-cvs/2004-October/004922.html
Comment 12 Igor Melichev 2004-10-15 11:29:12 UTC
Patches
http://www.ghostscript.com/pipermail/gs-cvs/2004-October/004926.html
http://www.ghostscript.com/pipermail/gs-cvs/2004-October/004927.html

The bug in HEAD is now closed, but we keep this bug report open, because we 
have to fix it in GS_8_1X.